fix page flash in ligh/dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1187,7 +1187,7 @@ img.alignright {
     color: var(--theme-muted-color);
 }
 .post-archive a:hover {
-    color: var(--theme-color);
+    color: var(--theme-link-hover);
 }
 
 /* Dark theme specific styles for post-archive */
